--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,7 +37,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "html-webpack-plugin": "^5.5.3"
-  }
+  "resolutions": {
+    "webpack": "4.29.6"
+  }  
 }
